Group dependecies in manifest editor